--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL=postgresql+:psycopg//USER:PASSWORD@HOST:5432/DBNAME
+DATABASE_URL=postgresql+://USER:PASSWORD@HOST:5432/DBNAME
 PORT=8000
 ALLOWED_ORIGINS=http://localhost:5173
