--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
 SQLAlchemy==2.0.32
-asyncpg==0.29.0
+psycopg[binary]==3.2.9
 pydantic[email]==2.8.2
 python-dotenv==1.0.1
