--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,14 @@
 services:
   - type: web
     name: bbx-fastapi
-    env: python
-    pythonVersion: 3.11.9
+    runtime: python
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
+      - key: PYTHON_VERSION
+        value: "3.11.9"         # fija Python 3.11
       - key: DATABASE_URL
-        sync: false
+        sync: false             # te pedirá el valor al crear el blueprint
       - key: ALLOWED_ORIGINS
         value: "http://localhost:5173"
