--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-DATABASE_URL=postgresql+://USER:PASSWORD@HOST:5432/DBNAME
-PORT=8000
+# Para LOCAL con docker-compose (usa el servicio "db")
+DATABASE_URL=postgresql+psycopg:postgresql://bd_bbxback_user:362pZuxhYkMzfRsQ6GBcJx9w2wTqD3T0@dpg-d2r18aumcj7s73cmtav0-a/bd_bbxback
+
+# Dominios del front (coma-separados). En producción agrega el dominio real
 ALLOWED_ORIGINS=http://localhost:5173
+
+# Puerto de la API en local (Render ignora esto y usa $PORT)
+PORT=8000
